--- a/track/4.html
+++ b/track/4.html
@@ -109,46 +109,51 @@
         </table>
     </div>
     <div class="lyrics">
-        내가 누굴 탐했었는지
-        <br>네가 알면 넌 어떤 표정을 할까
-        <br>내가 어제 무얼 했는지
-        <br>네가 알면 넌 어떤 얘기를 할까
-        <br>
-        <br>영원한 비밀이란 없다고 Oh 말을 하지만
-        <br>떠들썩하거나 사소하거나
-        <br>끔찍한 파문이 일지 몰라
-        <br>
-        <br>누구나 비밀은 있는 거야 아무에게도 말하지 마
-        <br>우리 아무 일도, 없던 걸로, 안 들은 걸로 해요
-        <br>나도 비밀은 있는 거야 누구에게도 말하지 마
-        <br>사람들에게는 진실이란 중요하지 않아
-        <br>
-        <br>내가 무슨 꿈을 꿨는지
-        <br>네가 알면 넌 어떤 얼굴을 할까
-        <br>내가 누굴 싫어하는지
-        <br>네가 알면 까무러칠지도 몰라
-        <br>
-        <br>영원한 비밀이란 없다고
-        <br>Oh oh oh oh 말을 하지만
-        <br>넌 내가 정말로 없을 것 같니
-        <br>아무도 모르는 story 하나
-        <br>넌 네가 정말로 다 안 것 같니
-        <br>너의 제일 가까운 그 사람을
-        <br>
-        <br>누구나 비밀은 있는 거야 아무에게도 말하지 마
-        <br>우리 아무 일도, 없던 걸로, 안 들은 걸로 해요
-        <br>모두 비밀은 있는 거야 누구에게도 말하지 마
-        <br>사람들에게는 진실이란 중요하지 않아
-        <br>
-        <br>비밀이 있기에 빛나는 사람
-        <br>나를 언제나 궁금하게 만들어
-        <br>다가갈수록 신비로운 사람
-        <br>그대의 모든 걸 말하지 마요
-        <br>
-        <br>누구나 비밀은 있는 거야 아무에게도 말하지 마
-        <br>우리 아무 일도, 없던 걸로, 안 들은 걸로 해요
-        <br>모두 비밀은 있는 거야 누구에게도 말하지 마
-        <br>사람들에게는 진실이란 중요하지 않아
+    길을 잃었다, 어딜 가야 할까
+    <br>열두 개로 갈린 조각난 골목길
+    <br>어딜 가면 너를 다시 만날까
+    <br>운명으로 친다면, 내 운명을 고르자면
+    <br>눈을 감고 걸어도 맞는 길을 고르지
+    <br>사라져버린 summer time
+    <br>너의 두 눈이 나를 비추던 summer time
+    <br>기다리기만 하는 내가 아냐
+    <br>너를 찾아 뚜벅
+    <br>내게 돌아올 summer time
+    <br>찬 바람 불면 그냥 두 눈 감기로 해
+    <br>What's the time? Summer time
+    <br>움파룸파둠 두비두바둠
+    <br>슬프지 않아 춤을 춘다
+    <br>다시, 다시
+    <br>길을 찾아 떠난 갈색머리 아가씨는
+    <br>다시 사랑에 빠졌고 행복했더라는
+    <br>처음부터 다시 쓰는 이야기
+    <br>좋은 구둘 신으면 더 좋은 데로 간다며
+    <br>멈춰지지 않도록, 너를 찾을 때까지
+    <br>사라져버린 summer time
+    <br>너의 두 눈이 나를 비추던 summer time
+    <br>기다리기만 하는 내가 아냐
+    <br>너를 찾아 뚜벅
+    <br>내게 돌아올 summer time
+    <br>찬 바람 불면 그냥 두 눈 감기로 해
+    <br>What's the time? Summer time
+    <br>움파룸파둠 두비두바둠
+    <br>멈추지 않아 춤을 춘다
+    <br>다시, 다시
+    <br>나의 발이 자꾸 발이 자꾸 맘대로 yoo-hoo
+    <br>Oh my, pink shoes, oh my
+    <br>난난 마음 잡고 마음 잡고 제대로 yoo-hoo
+    <br>Yeah, yeah 좀 더 빠르게
+    <br>잃어버린 내 summer time
+    <br>낯선 시간을 헤매이다 널 찾을까
+    <br>아직 길은 멀었니, 겁이 나면
+    <br>나는 괜히 웃어
+    <br>혹시 넌 나를 잊을까
+    <br>너의 시간이 내게 멈춰있길 바래
+    <br>Slow the time, stop the time
+    <br>움파룸파룸 두비두비
+    <br>움파룸파룸 두비두바둠
+    <br>좀 더 빠르게 달려간다
+    <br>다시, 다시, 다시, 다시
     </div>
     <br><a href="../index.html" style="font-family:Cafe24ClassicType-Regular;">홈으로</a>
 </body>
